# jupyterlab-wakatime

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  babel.config.js  conftest.py  install.json  jest.config.js  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml  prep-release.yml  publish-release.yml
jupyter-config/server-config/: jupyterlab_wakatime.json  waka_jlab.json
jupyterlab_wakatime/: __init__.py  handlers.py  wakatime.py
schema/: plugin.json
src/: handler.ts  index.ts  status.tsx  watch.ts
src/__tests__/: waka_jlab.spec.ts
style/: base.css
ui-tests/: package.json  playwright.config.js
ui-tests/tests/: waka_jlab.spec.ts
waka_jlab/: __init__.py  handlers.py
waka_jlab/tests/: __init__.py  test_handlers.py
